docs(readme): comprehensive update with 16-agent team, UbuntuOps, and new features [mkpro]